force-app/main/default/objects/Section__c/Section__c.object-meta.xml
<CustomObject>
    <description>Sections related to need analysis verticals</description>
    <label>Form Page Section</label>
    <nameField>
        <label>Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Page Sections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>