force-app/main/default/objects/Section__c/fields/Background_Color__c.field-meta.xml
<CustomField>
    <fullName>Background_Color__c</fullName>
    <description>HTML color of the section background, i.e.: #F48900, #FFFFFF. See http://htmlcolorcodes.com/ to find your favorite color</description>
    <inlineHelpText>HTML color of the section background, i.e.: #F48900, #FFFFFF. See http://htmlcolorcodes.com/ to find your favorite color</inlineHelpText>
    <label>Background Color</label>
    <length>200</length>
    <type>Text</type>
</CustomField>