force-app/main/default/objects/Section__c/fields/Column_Layout__c.field-meta.xml
<CustomField>
    <fullName>Column_Layout__c</fullName>
    <inlineHelpText>select 1 to display the section with 100% width or 2 for 50% width</inlineHelpText>
    <label>Column Layout</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>