force-app/main/default/objects/Section__c/fields/Display_Title__c.field-meta.xml
<CustomField>
    <fullName>Display_Title__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Display Title</label>
    <type>Checkbox</type>
</CustomField>