force-app/main/default/objects/Section__c/fields/Information__c.field-meta.xml
<CustomField>
    <fullName>Information__c</fullName>
    <description>Information about the section</description>
    <inlineHelpText>Information about the Section. e.g. This section will be used for CHU Provider</inlineHelpText>
    <label>Information</label>
    <type>TextArea</type>
</CustomField>