force-app/main/default/objects/Section__c/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <inlineHelpText>Display the section only for initial quote or final quote or for both</inlineHelpText>
    <label>Process</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Quote</fullName>
            </value>
            <value>
                <fullName>Recommendations</fullName>
            </value>
            <value>
                <fullName>Final Quote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>