force-app/main/default/objects/Section__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Populate the section to make current section as a  sub section of populated one.</inlineHelpText>
    <label>Section</label>
    <referenceTo>Section__c</referenceTo>
    <relationshipName>Sections</relationshipName>
    <type>Lookup</type>
</CustomField>