force-app/main/default/objects/Section__c/fields/Text_Color__c.field-meta.xml
<CustomField>
    <fullName>Text_Color__c</fullName>
    <description>HTML color of the text, i.e.: #F48900, #FFFFFF. See http://htmlcolorcodes.com/ to find your favorite color</description>
    <inlineHelpText>HTML color of the text, i.e.: #F48900, #FFFFFF. See http://htmlcolorcodes.com/ to find your favorite color</inlineHelpText>
    <label>Text Color</label>
    <length>100</length>
    <type>Text</type>
</CustomField>