force-app/main/default/objects/Section__c/fields/Vertical_Version__c.field-meta.xml
<CustomField>
    <fullName>Vertical_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vertical Version</label>
    <referenceTo>Vertical_Version__c</referenceTo>
    <relationshipName>Sections</relationshipName>
    <type>Lookup</type>
</CustomField>