force-app/main/default/objects/Section__c/fields/Visible__c.field-meta.xml
<CustomField>
    <fullName>Visible__c</fullName>
    <defaultValue>&quot;true&quot;</defaultValue>
    <label>Visible</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>